@@ -36,6 +36,7 @@
 
 #include <cmtkVolume.h>
 #include <cmtkSmartPtr.h>
+#include <cmtkSmartPtrConst.h>
 
 #include <algorithm>
 
@@ -68,6 +69,9 @@ public:
 
   /// Smart pointer to UniformVolume.
   typedef SmartPointer<Self> SmartPtr;
+
+  /// Smart pointer to const UniformVolume.
+  typedef SmartPointerConst<Self> SmartPtrConst;
 
   /// Points array type.
   typedef std::vector< std::vector<Types::Coordinate> > PointsArrayType;
